test-suite/tests/ui/states/invalid/duplicate_assert.stderr
error: state is already asserted
 --> tests/ui/states/invalid/duplicate_assert.rs:8:24
  |
8 |     #[stated(assert(A, A))]
  |                        ^
